<resources>
    <string name="app_name">NextGIS Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="action_more">More</string>
    <string name="intro_title_1">Welcome!</string>
    <string name="intro_title_2">Have fun!</string>
    <string name="intro_description_1">It\'s NextGIS Mobile v3</string>
    <string name="intro_description_2">Under construction</string>
    <string name="signed_in_already">Already signed in</string>
    <string name="sign_out_first">Please sign out first to add new account.</string>
    <string name="login_or_email">Login or email</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="restore">Restore password</string>
    <string name="social">Sign in with social:</string>
    <string name="authenticate">@string/sign_in</string>
    <string name="authenticate_new">@string/sign_up</string>
    <string name="invalid_email">Invalid email format</string>
    <string name="empty_password">Please type your password</string>
    <string name="terms_and_privacy">By signing up, you agree to the <a href='https://nextgis.com/terms'>Terms of Service</a> and <a href='https://nextgis.com/privacy'>Privacy Policy</a></string>
    <string name="not_implemented">Not implemented yet</string>
    <string name="skip_ngid">Start work without signin in</string>
    <string name="upgrade">You have free plan, some functionality is locked</string>
    <string name="unidentified">You are not signed in</string>
    <string name="unlock">Unlock</string>
    <string name="confirmation">Sign out?</string>
    <string name="ngid_disconnect">You won\'t be able to sync data and use your plan features.</string>
    <string name="general">General</string>
    <string name="map">Map</string>
    <string name="location">Location</string>
    <string name="webgis">Web GIS</string>
    <string name="tracking">Tracks and bypass</string>
    <string name="backup">Backup</string>
    <string name="collect_analytics">Collect anonymous stats</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="roaming_on">Mobile network in roaming</string>
    <string name="data_storage">Data storage</string>
    <string name="internal">Internal storage</string>
    <string name="external">SD Card</string>
    <string name="status_panel">Show status panel</string>
    <string name="zoom_buttons">Show zoom buttons</string>
    <string name="use_favorites">Use favorites</string>
    <string name="map_measurement">Map measurement tools</string>
    <string name="selection_style">Selected feature style</string>
    <string name="reset_style">Reset style</string>
    <string name="scale_format">Scale format</string>
    <string name="coordinate_format">Coordinate format</string>
    <string name="coordinate_precision">Coordinate precision, decimal places</string>
    <string name="degrees_min_sec">Degrees - Minutes Seconds</string>
    <string name="degrees_min">Degrees - Minutes</string>
    <string name="degrees">Degrees</string>
    <string name="fill_color">Fill color</string>
    <string name="fill_color_default" translatable="false">FF03A9F4</string>
    <string name="stroke_color">Stroke color</string>
    <string name="stroke_color_default" translatable="false">FF01579B</string>
    <string name="stroke_width">Stroke width</string>
    <string name="stroke_width_default" translatable="false">4</string>
    <string name="map_background">Map background</string>
    <string name="scale_text">Text «1 : 100 000»</string>
    <string name="scale_bar">Scale bar «10 km»</string>
    <string name="scale_zoom">Zoom level «15»</string>
    <string name="bright">Bright</string>
    <string name="dark">Dark</string>
    <string name="filter_emissions">Filter GPS emissions</string>
    <string name="daily_split">Split tracks by midnight</string>
    <string name="cloud_sync">Sync with Web-GIS</string>
    <string name="location_accuracy">Location accuracy</string>
    <string name="cellular">Cellular</string>
    <string name="gps">GPS</string>
    <string name="geo_both">GPS + Cellular</string>
    <string name="location_time">GPS fix interval, sec</string>
    <string name="location_distance">Minimum update distance, m</string>
    <string name="location_count">Measure count</string>
    <string name="max_count">Values range: 1–20</string>
    <string name="device_id">Device ID</string>
    <string name="layers">Layers</string>
    <string name="search">Search</string>
    <string name="layer_type">Layer type</string>
    <string name="point">Point</string>
    <string name="line">Line</string>
    <string name="polygon">Polygon</string>
    <string name="multipoint">Multipoint</string>
    <string name="multiline">Multiline</string>
    <string name="multipolygon">Multipolygon</string>
    <string name="raster">Raster</string>
    <string name="vector">Vector</string>
    <string name="zoom">Zoom to</string>
    <string name="table">Attributes table</string>
    <string name="params">Parameters</string>
    <string name="send_to_cloud">Send to cloud</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="visual_settings">Visual settings</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="opacity">Opacity</string>
    <string name="grayscale">Grayscale</string>
    <string name="layer_settings">Layer parameters</string>
    <string name="style">Style</string>
    <string name="fields">Fields</string>
    <string name="main_settings">Main settings</string>
    <string name="layer_info">Layer info (local path)</string>
    <string name="layer_name">Layer name</string>
    <string name="zoom_levels">Visibility zoom levels</string>
    <string name="zoom_hint">Selected interval: %1$d (%2$.2f %3$s) - %4$d (%5$.2f %6$s)</string>
    <string name="cache">Cache</string>
    <string name="cache_range">Allowed range: 10 – 200 Mb</string>
    <string name="max_cache">Max cache size, Mb</string>
    <string name="lifetime">Tile lifetime</string>
    <string name="hour">Hour</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="add_layer">Add layer</string>
    <string name="create_new">Create new empty layer</string>
    <string name="add_from_file">Add from file</string>
    <string name="add_from_qms">Add geoservice</string>
    <string name="add_from_ngw">Add from Nextgis.com</string>
    <string name="new_layer">New layer</string>
    <string name="geometry_type">Geometry type</string>
    <string name="add_field">Add field</string>
    <string name="layer_created">New layer created successfully</string>
    <string name="layer_loaded">Layer imported successfully</string>
    <string name="percentage">%d\%%</string>
    <string name="integer">Integer</string>
    <string name="real">Real</string>
    <string name="string">String</string>
    <string name="datetime">Datetime</string>
    <string name="new_field">New field</string>
    <string name="field_name">Name in DB</string>
    <string name="field_alias">Field name</string>
    <string name="field_type">Field type</string>
    <string name="add">Add</string>
    <string name="default_value">Default value</string>
    <string name="change">Change</string>
    <string name="editing">Editing</string>
    <string name="units">Units</string>
    <string name="threshold">Threshold</string>
    <string name="stick_mode">Stick mode</string>
    <string name="rebuild_cache">Rebuild cache</string>
    <string name="clear_features">Remove all features</string>
    <string name="deny_editing">Disable editing</string>
    <string name="sticking">Sticking</string>
    <string name="sticking_layers">Layers to stick to</string>
    <string name="sticking_count">%d layers selected</string>
    <string name="visual_mode">Visual style</string>
    <string name="symbol">Symbol</string>
    <string name="caption">Caption</string>
    <string name="enable_caption">Enable caption</string>
    <string name="clustering">Clustering</string>
    <string name="enable_clustering">Use clustering</string>
    <string name="figure">Figure</string>
    <string name="size">Size</string>
    <string name="line_width">Line width</string>
    <string name="line_color">Line color</string>
    <string name="source_field">Field (caption source)</string>
    <string name="font">Font</string>
    <string name="font_color">Font color</string>
    <string name="caption_alignment">Caption alignment</string>
    <string name="simple_feature">Simple symbol</string>
    <string name="rule_feature">Rule style</string>
    <string name="roboto">Roboto</string>
    <string name="sans_serif">sans-serif</string>
    <string name="size12">12</string>
    <string name="size16">16</string>
    <string name="size20">20</string>
    <string name="left">Left</string>
    <string name="top">Top</string>
    <string name="right">Right</string>
    <string name="bottom">Bottom</string>
    <string name="circle">Circle</string>
    <string name="box">Box</string>
    <string name="triangle">Triangle</string>
    <string name="diamond">Diamond</string>
    <string name="vertices_and_edges">Vertices and edges</string>
    <string name="vertices">Vertices</string>
    <string name="edges">Edges</string>
    <string name="threshold10">10</string>
    <string name="threshold15">15</string>
    <string name="threshold20">20</string>
    <string name="pixels">Pixels</string>
    <string name="centimeters">Centimeters</string>
    <string name="default_field">Selected field will be shown while you are interacting with feature (while editing for example). To set up a caption for object on a map choose one in «Style» tab.</string>
    <string name="list">List</string>
    <string name="sync_period">Sync period</string>
    <string name="sync_notification">Sync notifications</string>
    <string name="sync_attachments">Sync attachments</string>
    <string name="sync_max_size">Maximum attachment size (Mb)</string>
    <string name="over_wifi_only">Oversized attachments will be sent over Wi-Fi only</string>
    <string name="description">Description</string>
    <string name="check_connection">Check connection</string>
    <string name="add_layer_from_file">Add layer from file</string>
    <string name="load">Load</string>
    <string name="back">Back</string>
    <string name="layer_loading">Layer loading</string>
    <string name="cancel_loading">Cancel loading</string>
    <string name="add_layer_failed">Add layer failed</string>
    <string name="cannot_create_layer">Cannot create layer</string>
    <string name="refresh">Refresh</string>
    <string name="apply">Apply</string>
    <string name="color">Color</string>
    <string name="select_color">Select color</string>
    <string name="feature_more_1000">Adding layers with more than 1000 features is a pro plan option. Buy a premium to get more features!</string>
    <string name="add_web_gis">Add Web GIS</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="remote_resources">Nextgis.com resources</string>
    <string name="cancel">cancel</string>
    <string name="password">password</string>
    <string name="account">account</string>
    <string name="login">login</string>
    <string name="favorites">Favorites</string>
    <string name="share_map">Share map</string>
    <string name="pointing">Pointing</string>
    <string name="track_record">Record track</string>
    <string name="track_record_start">Record track start</string>
    <string name="track_record_stop">Record track stop</string>
    <string name="tracks_list">Tracks list</string>
    <string name="permissions">Permissions</string>
</resources>