<!--
  ~ Project:  NextGIS Mobile
  ~ Purpose:  Mobile GIS for Android
  ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
  ~ *****************************************************************************
  ~ Copyright © 2018-2019 NextGIS, info@nextgis.com
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nextgis.nextgismobile.activity.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/settings_24"
        android:orderInCategory="25"
        android:title="@string/not_implemented"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_more"
        android:orderInCategory="100"
        android:title="@string/action_more"
        android:icon="@drawable/ic_dots_vertical_white"
        app:showAsAction="always" >
        <menu>
            <item
                android:id="@+id/menu_favorites"
                android:title="@string/favorites"
                app:showAsAction="always" />
            <item
                android:id="@+id/menu_share_map"
                android:title="@string/share_map"
                app:showAsAction="always" />

            <item
                android:id="@+id/menu_pointing"
                android:title="@string/pointing"
                app:showAsAction="always" />

            <item
                android:id="@+id/menu_track_record"
                android:title="@string/track_record"
                app:showAsAction="always" />

            <item
                android:id="@+id/menu_tracks_list"
                android:title="@string/tracks_list"
                app:showAsAction="always" />


        </menu>
    </item>
</menu>
