<?xml version="1.0" encoding="utf-8"?><!--
  ~ Project:  NextGIS Mobile
  ~ Purpose:  Mobile GIS for Android
  ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
  ~ *****************************************************************************
  ~ Copyright © 2018 NextGIS, info@nextgis.com
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="settings"
            type="com.nextgis.nextgismobile.viewmodel.SettingsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        tools:context=".activity.SettingsActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.SwitchCompat
                    style="@style/Switch.Settings"
                    android:checked="@={settings.filterEmissions}"
                    android:text="@string/filter_emissions" />

                <android.support.v7.widget.SwitchCompat
                    style="@style/Switch.Settings"
                    android:checked="@={settings.splitDaily}"
                    android:text="@string/daily_split" />

                <android.support.v7.widget.SwitchCompat
                    style="@style/Switch.Settings"
                    android:checked="@={settings.cloudSync}"
                    android:text="@string/cloud_sync" />

                <android.support.design.widget.TextInputLayout style="@style/SettingsEditText">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/location_time"
                        android:inputType="numberDecimal"
                        android:text="@={settings.trackTime}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout style="@style/SettingsEditText">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/location_distance"
                        android:inputType="numberDecimal"
                        android:text="@={settings.trackDistance}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout style="@style/SettingsEditText">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/location_count"
                        android:inputType="numberDecimal"
                        android:text="@={settings.trackCount}" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    style="@style/SettingsSummary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/max_count" />
            </LinearLayout>
        </ScrollView>

        <TextView
            style="@style/SettingsSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/device_id" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:text="@{settings.uuid}"
            android:textColor="#000"
            android:textSize="16sp"
            tools:text="0055AAFF" />
    </LinearLayout>
</layout>